# Neuromorphic-Radar-Signal-Processing

./: README.md  pyproject.toml
nrsp/algs/cu/spinr/: cu_spinr.py
nrsp/configs/: config_power_telemetry.py  config_radar_basics.py  config_radar_basics_small.py  config_rd_spinr_ags.py  config_rspinr_1d_multichannel.py
nrsp/datasets/: bbm_drift_per_timestep.npy  dummy.py  handler_config_for_measurement.yaml  infineon_bbm.py  naomi4radar.py  naomi4radar_config.yaml  naomi4radar_handler.py  naomi4radar_handler_v2.py  radar_params.py  radial.py
nrsp/datasets/bbm/: seed_0__MAX_TARGET_VALUE=1500.0_MIN_TARGET_VALUE=0.45.json  seed_1__MAX_TARGET_VALUE=1500.0_MIN_TARGET_VALUE=0.45.json
nrsp/metrics/: cfar_metrics.py  evaluator.py
nrsp/rsp/: cfar.py  preprocess.py  snr.py
nrsp/utils/: cfar.py  cu.py  dft.py  encoding.py  fft.py  log.py  nx.py  plot.py  radar.py
results/ags/detection_performance/: fft_const_thresh.csv  fft_os_cfar.csv  spinr_fixed_m_gridseach_c1_c2.csv  spinr_os_cfar_float.csv  spinr_os_cfar_float_fixed_m_gridsearch_c1_c2.csv  spinr_os_cfar_nx.csv  spinr_turnoff_float.csv  spinr_turnoff_float_heatmap.csv  spinr_turnoff_nx.csv
scripts/ags/evaluations/: detection_performance_fft_const_thresh.py  detection_performance_fft_os_cfar.py  detection_performance_spinr_ags_float.py  detection_performance_spinr_ags_nx.py  detection_performance_spinr_os_cfar_float.py  detection_performance_spinr_os_cfar_nx.py
scripts/ags/helpers/: bbm_rd_filter_dataset.py
scripts/ags/plots/: f1_vs_turnoff.py  spinr_dynamics_with_ags.py
scripts/docker/: Dockerfile_cuda12_cupy
(+77 files in other folders)
